--- a/index.html
+++ b/index.html
@@ -12,266 +12,201 @@
       line-height: 1.6;
       background: #f5f5f5;
     }
-
-    h1 {
-      font-size: 1.4rem;
-      margin-bottom: 12px;
-    }
-
+    h1 { font-size: 1.4rem; margin-bottom: 12px; }
     .card {
-      background: #fff;
-      padding: 16px;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.06);
-      margin-bottom: 16px;
+      background: #fff; padding: 16px; border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.06); margin-bottom: 16px;
     }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-
-    th, td {
-      padding: 6px 4px;
-      vertical-align: middle;
-    }
-
-    th.name-col, td.name-col {
-      width: 90px;
-      white-space: nowrap;
-    }
-
-    th {
-      text-align: left;
-      font-weight: 600;
-      font-size: 0.9rem;
-    }
-
+    table { width: 100%; border-collapse: collapse; }
+    th, td { padding: 6px 4px; vertical-align: middle; }
+    th.name-col, td.name-col { width: 90px; white-space: nowrap; }
+    th { text-align: left; font-weight: 600; font-size: 0.9rem; }
     .status-group {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px 16px;
-      font-size: 0.9rem;
+      display: flex; flex-wrap: wrap;
+      gap: 8px 16px; font-size: 0.9rem;
     }
-
-    .buttons {
-      display: flex;
-      gap: 8px;
-      margin-top: 12px;
-    }
-
     button {
-      border: none;
-      border-radius: 999px;
-      padding: 8px 16px;
-      font-size: 0.9rem;
-      cursor: pointer;
-      background: #2563eb;
-      color: #fff;
-      box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+      border: none; border-radius: 999px; padding: 8px 16px;
+      font-size: 0.9rem; cursor: pointer;
+      background: #2563eb; color: #fff;
     }
-
-    button.secondary {
-      background: #e5e7eb;
-      color: #111827;
-    }
-
-    button:hover {
-      filter: brightness(0.97);
-    }
-
+    button.secondary { background: #e5e7eb; color: #111827; }
     textarea {
-      width: 100%;
-      box-sizing: border-box;
-      font-family: "Yu Gothic", system-ui, sans-serif;
-      font-size: 0.9rem;
-      padding: 8px;
-      border-radius: 6px;
-      border: 1px solid #d1d5db;
+      width: 100%; min-height: 140px;
+      padding: 8px; border-radius: 6px;
+      border: 1px solid #d1d5db; font-size: 0.9rem;
       resize: vertical;
-      min-height: 140px;
     }
-
-    .copy-box {
-      display: flex;
-      justify-content: flex-end;
-      margin-top: 8px;
-    }
-
+    .buttons { display: flex; gap: 8px; margin-top: 12px; }
+    .copy-box { display: flex; justify-content: flex-end; margin-top: 8px; }
     .copy-btn {
-      background: #10b981;
+      background: #10b981; padding: 6px 14px;
+      border-radius: 999px; cursor: pointer; font-size: 0.85rem;
       color: #fff;
-      padding: 6px 14px;
-      border-radius: 999px;
-      cursor: pointer;
-      font-size: 0.85rem;
     }
-
-    .copy-btn:hover {
-      filter: brightness(0.95);
-    }
-
   </style>
 </head>
 <body>
-  <h1>教育部 勤務状況メッセージ作成ツール</h1>
 
-  <div class="card">
-    <p>各メンバーの勤務区分を選択して「作成」ボタンを押すと、チャット等に貼り付けできる文面を自動生成します。</p>
+<h1>教育部 勤務状況メッセージ作成ツール</h1>
+
+<div class="card">
+  <p>勤務区分を選択して「作成」を押すと、貼り付け用メッセージを生成します。</p>
+</div>
+
+<div class="card">
+  <table>
+    <thead>
+      <tr>
+        <th class="name-col">名前</th>
+        <th>勤務区分</th>
+      </tr>
+    </thead>
+    <tbody id="member-rows"></tbody>
+  </table>
+
+  <div class="buttons">
+    <button id="generateBtn">作成</button>
+    <button id="clearBtn" class="secondary">リセット</button>
   </div>
+</div>
 
-  <div class="card">
-    <table>
-      <thead>
-        <tr>
-          <th class="name-col">名前</th>
-          <th>勤務区分</th>
-        </tr>
-      </thead>
-      <tbody id="member-rows"></tbody>
-    </table>
+<div class="card">
+  <p>生成されたメッセージ：</p>
+  <textarea id="output" placeholder="ここにメッセージが表示されます。"></textarea>
 
-    <div class="buttons">
-      <button id="generateBtn">作成</button>
-      <button id="clearBtn" class="secondary">リセット</button>
-    </div>
+  <div class="copy-box">
+    <button class="copy-btn" id="copyBtn">コピー</button>
   </div>
+</div>
 
-  <div class="card">
-    <p>生成されたメッセージ：</p>
-    <textarea id="output" placeholder="ここにメッセージが表示されます。"></textarea>
+<script>
+  const members = [
+    { name: "市川", default: "出社", hasExternal: false },
+    { name: "吉永", default: "出社", hasExternal: false },
+    { name: "安城", default: "出社", hasExternal: false },
+    { name: "長門", default: "出社", hasExternal: true },
+    { name: "島倉", default: "出社", hasExternal: true },
+    { name: "三本", default: "出社", hasExternal: true },
+    { name: "野中", default: "出社", hasExternal: true },
+    { name: "軽石", default: "出社", hasExternal: true },
+    { name: "小田部", default: "在宅", hasExternal: true },
+    { name: "宮本", default: "在宅", hasExternal: true },
+  ];
 
-    <div class="copy-box">
-      <button class="copy-btn" id="copyBtn">コピー</button>
-    </div>
-  </div>
+  // ★ 追加した勤務区分
+  const STATUSES = ["出社", "在宅", "休み", "午前休", "午後休"];
+  const EXTERNAL = "外部講師";
 
-  <script>
-    const members = [
-      { name: "市川", default: "出社", hasExternal: false },
-      { name: "吉永", default: "出社", hasExternal: false },
-      { name: "安城", default: "出社", hasExternal: false },
-      { name: "長門", default: "出社", hasExternal: true },
-      { name: "島倉", default: "出社", hasExternal: true },
-      { name: "三本", default: "出社", hasExternal: true },
-      { name: "野中", default: "出社", hasExternal: true },
-      { name: "小田部", default: "在宅", hasExternal: true },      
-      { name: "軽石", default: "出社", hasExternal: true },
-      { name: "宮本", default: "在宅", hasExternal: true },
-    ];
+  function buildRows() {
+    const tbody = document.getElementById("member-rows");
+    tbody.innerHTML = "";
 
-    const STATUSES = ["出社", "在宅", "休み"];
-    const EXTERNAL = "外部講師";
+    members.forEach((member, index) => {
+      const tr = document.createElement("tr");
 
-    function buildRows() {
-      const tbody = document.getElementById("member-rows");
-      tbody.innerHTML = "";
+      const nameTd = document.createElement("td");
+      nameTd.className = "name-col";
+      nameTd.textContent = member.name;
+      tr.appendChild(nameTd);
 
-      members.forEach((member, index) => {
-        const tr = document.createElement("tr");
+      const statusTd = document.createElement("td");
+      const groupDiv = document.createElement("div");
+      groupDiv.className = "status-group";
 
-        const nameTd = document.createElement("td");
-        nameTd.className = "name-col";
-        nameTd.textContent = member.name;
-        tr.appendChild(nameTd);
+      const groupName = "status-" + index;
 
-        const statusTd = document.createElement("td");
-        const groupDiv = document.createElement("div");
-        groupDiv.className = "status-group";
+      // ★ 新ステータスも含めて全部表示
+      STATUSES.forEach(statusLabel => {
+        const id = `${groupName}-${statusLabel}`;
+        const label = document.createElement("label");
+        const input = document.createElement("input");
 
-        const groupName = "status-" + index;
+        input.type = "radio";
+        input.name = groupName;
+        input.value = statusLabel;
+        input.id = id;
 
-        STATUSES.forEach(statusLabel => {
-          const id = `${groupName}-${statusLabel}`;
-          const label = document.createElement("label");
-          const input = document.createElement("input");
+        if (member.default === statusLabel)
+          input.checked = true;
 
-          input.type = "radio";
-          input.name = groupName;
-          input.value = statusLabel;
-          input.id = id;
-
-          if (member.default === statusLabel)
-            input.checked = true;
-
-          label.htmlFor = id;
-          label.appendChild(input);
-          label.append(" " + statusLabel);
-          groupDiv.appendChild(label);
-        });
-
-        if (member.hasExternal) {
-          const id = `${groupName}-${EXTERNAL}`;
-          const label = document.createElement("label");
-          const input = document.createElement("input");
-
-          input.type = "radio";
-          input.name = groupName;
-          input.value = EXTERNAL;
-          input.id = id;
-
-          label.htmlFor = id;
-          label.appendChild(input);
-          label.append(" " + EXTERNAL);
-          groupDiv.appendChild(label);
-        }
-
-        statusTd.appendChild(groupDiv);
-        tr.appendChild(statusTd);
-
-        tbody.appendChild(tr);
-      });
-    }
-
-    function generateMessage() {
-      const groups = {
-        "出社": [],
-        "在宅": [],
-        "休み": [],
-        "外部講師": []
-      };
-
-      members.forEach((member, index) => {
-        const radios = document.getElementsByName("status-" + index);
-        radios.forEach(r => {
-          if (r.checked) groups[r.value].push(member.name);
-        });
+        label.htmlFor = id;
+        label.appendChild(input);
+        label.append(" " + statusLabel);
+        groupDiv.appendChild(label);
       });
 
-      let lines = [];
-      lines.push("おはようございます。");
-      lines.push("本日の教育部の勤務状況は下記のとおりです。");
-      lines.push("");
+      // 外部講師の有無
+      if (member.hasExternal) {
+        const id = `${groupName}-${EXTERNAL}`;
+        const label = document.createElement("label");
+        const input = document.createElement("input");
+        input.type = "radio";
+        input.name = groupName;
+        input.value = EXTERNAL;
+        input.id = id;
+        label.htmlFor = id;
+        label.appendChild(input);
+        label.append(" " + EXTERNAL);
+        groupDiv.appendChild(label);
+      }
 
-      ["出社", "在宅", "休み", "外部講師"].forEach(status => {
-        if (groups[status].length > 0) {
-          lines.push(`${status}：${groups[status].join("、")}`);
-        }
+      statusTd.appendChild(groupDiv);
+      tr.appendChild(statusTd);
+      tbody.appendChild(tr);
+    });
+  }
+
+  function generateMessage() {
+    const groups = {
+      "出社": [],
+      "在宅": [],
+      "休み": [],
+      "午前休": [],
+      "午後休": [],
+      "外部講師": []
+    };
+
+    members.forEach((member, index) => {
+      const radios = document.getElementsByName("status-" + index);
+      radios.forEach(r => {
+        if (r.checked) groups[r.value].push(member.name);
       });
+    });
 
-      document.getElementById("output").value = lines.join("\n");
-    }
+    let lines = [];
+    lines.push("おはようございます。");
+    lines.push("本日の教育部の勤務状況は下記のとおりです。");
+    lines.push("");
 
-    function clearAll() {
-      buildRows();
-      document.getElementById("output").value = "";
-    }
+    // ★ 表示順も変更
+    ["出社", "在宅", "休み", "午前休", "午後休", "外部講師"].forEach(status => {
+      if (groups[status].length > 0) {
+        lines.push(`${status}：${groups[status].join("、")}`);
+      }
+    });
 
-    // ★ コピー機能
-    function copyToClipboard() {
-      const text = document.getElementById("output").value;
-      navigator.clipboard.writeText(text).then(() => {
-        alert("コピーしました！");
-      });
-    }
+    document.getElementById("output").value = lines.join("\n");
+  }
 
-    // 初期化
+  function clearAll() {
     buildRows();
-    document.getElementById("generateBtn").addEventListener("click", generateMessage);
-    document.getElementById("clearBtn").addEventListener("click", clearAll);
-    document.getElementById("copyBtn").addEventListener("click", copyToClipboard);
-  </script>
+    document.getElementById("output").value = "";
+  }
+
+  function copyToClipboard() {
+    const text = document.getElementById("output").value;
+    navigator.clipboard.writeText(text).then(() => {
+      alert("コピーしました！");
+    });
+  }
+
+  buildRows();
+
+  document.getElementById("generateBtn").addEventListener("click", generateMessage);
+  document.getElementById("clearBtn").addEventListener("click", clearAll);
+  document.getElementById("copyBtn").addEventListener("click", copyToClipboard);
+</script>
 
 </body>
 </html>
-
