--- a/index.html
+++ b/index.html
@@ -9,40 +9,69 @@
       max-width: 800px;
       margin: 20px auto;
       padding: 0 16px;
-      line-height: 1.6;
       background: #f5f5f5;
+      line-height: 1.6;
     }
     h1 { font-size: 1.4rem; margin-bottom: 12px; }
     .card {
-      background: #fff; padding: 16px; border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.06); margin-bottom: 16px;
+      background: #fff;
+      padding: 16px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.06);
+      margin-bottom: 16px;
     }
     table { width: 100%; border-collapse: collapse; }
-    th, td { padding: 6px 4px; vertical-align: middle; }
+    th, td { padding: 6px 4px; vertical-align: top; }
     th.name-col, td.name-col { width: 90px; white-space: nowrap; }
-    th { text-align: left; font-weight: 600; font-size: 0.9rem; }
-    .status-group {
-      display: flex; flex-wrap: wrap;
-      gap: 8px 16px; font-size: 0.9rem;
+    th { text-align: left; font-size: 0.9rem; }
+    .group {
+      display: flex;
+      gap: 12px;
+      flex-wrap: wrap;
+      font-size: 0.9rem;
     }
     button {
-      border: none; border-radius: 999px; padding: 8px 16px;
-      font-size: 0.9rem; cursor: pointer;
-      background: #2563eb; color: #fff;
+      border: none;
+      border-radius: 999px;
+      padding: 8px 16px;
+      font-size: 0.9rem;
+      cursor: pointer;
+      background: #2563eb;
+      color: #fff;
     }
-    button.secondary { background: #e5e7eb; color: #111827; }
+    button.secondary {
+      background: #e5e7eb;
+      color: #111827;
+    }
     textarea {
-      width: 100%; min-height: 140px;
-      padding: 8px; border-radius: 6px;
-      border: 1px solid #d1d5db; font-size: 0.9rem;
+      width: 100%;
+      min-height: 140px;
+      padding: 8px;
+      border-radius: 6px;
+      border: 1px solid #d1d5db;
+      font-size: 0.9rem;
       resize: vertical;
     }
-    .buttons { display: flex; gap: 8px; margin-top: 12px; }
-    .copy-box { display: flex; justify-content: flex-end; margin-top: 8px; }
+    .buttons {
+      display: flex;
+      gap: 8px;
+      margin-top: 12px;
+    }
+    .copy-box {
+      display: flex;
+      justify-content: flex-end;
+      margin-top: 8px;
+    }
     .copy-btn {
-      background: #10b981; padding: 6px 14px;
-      border-radius: 999px; cursor: pointer; font-size: 0.85rem;
+      background: #10b981;
+      padding: 6px 14px;
+      border-radius: 999px;
+      cursor: pointer;
+      font-size: 0.85rem;
       color: #fff;
+    }
+    input:disabled {
+      opacity: 0.5;
     }
   </style>
 </head>
@@ -51,163 +80,171 @@
 <h1>教育部 勤務状況メッセージ作成ツール</h1>
 
 <div class="card">
-  <p>勤務区分を選択して「作成」を押すと、貼り付け用メッセージを生成します。</p>
-</div>
-
-<div class="card">
   <table>
     <thead>
       <tr>
         <th class="name-col">名前</th>
         <th>勤務区分</th>
+        <th>時間帯オプション</th>
       </tr>
     </thead>
-    <tbody id="member-rows"></tbody>
+    <tbody id="rows"></tbody>
   </table>
 
   <div class="buttons">
-    <button id="generateBtn">作成</button>
-    <button id="clearBtn" class="secondary">リセット</button>
+    <button id="generate">作成</button>
+    <button id="reset" class="secondary">リセット</button>
   </div>
 </div>
 
 <div class="card">
   <p>生成されたメッセージ：</p>
-  <textarea id="output" placeholder="ここにメッセージが表示されます。"></textarea>
+  <textarea id="output"></textarea>
 
   <div class="copy-box">
-    <button class="copy-btn" id="copyBtn">コピー</button>
+    <button class="copy-btn" id="copy">コピー</button>
   </div>
 </div>
 
 <script>
   const members = [
-    { name: "市川", default: "出社", hasExternal: false },
-    { name: "吉永", default: "出社", hasExternal: false },
-    { name: "安城", default: "出社", hasExternal: false },
-    { name: "長門", default: "出社", hasExternal: true },
-    { name: "島倉", default: "出社", hasExternal: true },
-    { name: "三本", default: "出社", hasExternal: true },
-    { name: "野中", default: "出社", hasExternal: true },
-    { name: "小田部", default: "在宅", hasExternal: true },
-    { name: "軽石", default: "出社", hasExternal: true },
-    { name: "宮本", default: "在宅", hasExternal: true },
+    { name: "市川", default: "出社", canExternal: false },
+    { name: "吉永", default: "出社", canExternal: false },
+    { name: "安城", default: "出社", canExternal: false },
+    { name: "長門", default: "出社", canExternal: true },
+    { name: "島倉", default: "出社", canExternal: true },
+    { name: "三本", default: "出社", canExternal: true },
+    { name: "野中", default: "出社", canExternal: true },
+    { name: "小田部", default: "在宅", canExternal: true },
+    { name: "軽石", default: "出社", canExternal: true },
+    { name: "宮本", default: "在宅", canExternal: true }
   ];
 
-  // ★ 追加した勤務区分
-  const STATUSES = ["出社", "在宅", "休み", "午前休", "午後休"];
-  const EXTERNAL = "外部講師";
-
-  function buildRows() {
-    const tbody = document.getElementById("member-rows");
+  function build() {
+    const tbody = document.getElementById("rows");
     tbody.innerHTML = "";
 
-    members.forEach((member, index) => {
+    members.forEach((m, i) => {
       const tr = document.createElement("tr");
 
-      const nameTd = document.createElement("td");
-      nameTd.className = "name-col";
-      nameTd.textContent = member.name;
-      tr.appendChild(nameTd);
+      const baseStatuses = ["出社", "在宅", "休み"];
+      if (m.canExternal) baseStatuses.push("外部講師");
 
-      const statusTd = document.createElement("td");
-      const groupDiv = document.createElement("div");
-      groupDiv.className = "status-group";
+      tr.innerHTML = `
+        <td class="name-col">${m.name}</td>
+        <td>
+          <div class="group">
+            ${baseStatuses.map(b =>
+              `<label>
+                <input type="radio" name="base-${i}" value="${b}" ${b === m.default ? "checked" : ""}>
+                ${b}
+              </label>`
+            ).join("")}
+          </div>
+        </td>
+        <td>
+          <div class="group">
+            <label>
+              <input type="checkbox" name="am-${i}">
+              午前休
+            </label>
+            <label>
+              <input type="checkbox" name="pm-${i}">
+              午後休
+            </label>
+          </div>
+        </td>
+      `;
 
-      const groupName = "status-" + index;
+      tbody.appendChild(tr);
 
-      // ★ 新ステータスも含めて全部表示
-      STATUSES.forEach(statusLabel => {
-        const id = `${groupName}-${statusLabel}`;
-        const label = document.createElement("label");
-        const input = document.createElement("input");
+      const baseRadios = tr.querySelectorAll(`input[name="base-${i}"]`);
+      const am = tr.querySelector(`input[name="am-${i}"]`);
+      const pm = tr.querySelector(`input[name="pm-${i}"]`);
 
-        input.type = "radio";
-        input.name = groupName;
-        input.value = statusLabel;
-        input.id = id;
-
-        if (member.default === statusLabel)
-          input.checked = true;
-
-        label.htmlFor = id;
-        label.appendChild(input);
-        label.append(" " + statusLabel);
-        groupDiv.appendChild(label);
+      baseRadios.forEach(radio => {
+        radio.addEventListener("change", () => {
+          if (radio.checked && radio.value === "休み") {
+            am.checked = false;
+            pm.checked = false;
+            am.disabled = true;
+            pm.disabled = true;
+          } else {
+            am.disabled = false;
+            pm.disabled = false;
+          }
+        });
       });
 
-      // 外部講師の有無
-      if (member.hasExternal) {
-        const id = `${groupName}-${EXTERNAL}`;
-        const label = document.createElement("label");
-        const input = document.createElement("input");
-        input.type = "radio";
-        input.name = groupName;
-        input.value = EXTERNAL;
-        input.id = id;
-        label.htmlFor = id;
-        label.appendChild(input);
-        label.append(" " + EXTERNAL);
-        groupDiv.appendChild(label);
-      }
+      am.addEventListener("change", () => {
+        if (am.checked) pm.checked = false;
+      });
+      pm.addEventListener("change", () => {
+        if (pm.checked) am.checked = false;
+      });
 
-      statusTd.appendChild(groupDiv);
-      tr.appendChild(statusTd);
-      tbody.appendChild(tr);
+      const initial = [...baseRadios].find(r => r.checked)?.value;
+      if (initial === "休み") {
+        am.disabled = true;
+        pm.disabled = true;
+      }
     });
   }
 
-  function generateMessage() {
-    const groups = {
-      "出社": [],
-      "在宅": [],
-      "休み": [],
-      "午前休": [],
-      "午後休": [],
-      "外部講師": []
+  function generate() {
+    const result = {
+      出社: [],
+      在宅: [],
+      休み: [],
+      外部講師: []
     };
 
-    members.forEach((member, index) => {
-      const radios = document.getElementsByName("status-" + index);
-      radios.forEach(r => {
-        if (r.checked) groups[r.value].push(member.name);
-      });
+    members.forEach((m, i) => {
+      const base = [...document.getElementsByName(`base-${i}`)]
+        .find(r => r.checked).value;
+      const amOff = document.querySelector(`input[name="am-${i}"]`).checked;
+      const pmOff = document.querySelector(`input[name="pm-${i}"]`).checked;
+
+      if (amOff && pmOff) {
+        result["休み"].push(m.name);
+      } else if (amOff) {
+        result["休み"].push(`${m.name}(午前)`);
+        result[base].push(`${m.name}(午後)`);
+      } else if (pmOff) {
+        result[base].push(`${m.name}(午前)`);
+        result["休み"].push(`${m.name}(午後)`);
+      } else {
+        result[base].push(m.name);
+      }
     });
 
-    let lines = [];
+    const lines = [];
     lines.push("おはようございます。");
     lines.push("本日の教育部の勤務状況は下記のとおりです。");
     lines.push("");
-
-    // ★ 表示順も変更
-    ["出社", "在宅", "休み", "午前休", "午後休", "外部講師"].forEach(status => {
-      if (groups[status].length > 0) {
-        lines.push(`${status}：${groups[status].join("、")}`);
-      }
-    });
+    lines.push(`出社：${result["出社"].join("、")}`);
+    lines.push(`在宅：${result["在宅"].join("、")}`);
+    lines.push(`休み：${result["休み"].join("、")}`);
+    if (result["外部講師"].length > 0) {
+      lines.push(`外部講師：${result["外部講師"].join("、")}`);
+    }
 
     document.getElementById("output").value = lines.join("\n");
   }
 
-  function clearAll() {
-    buildRows();
-    document.getElementById("output").value = "";
-  }
-
   function copyToClipboard() {
     const text = document.getElementById("output").value;
+    if (!text) return;
     navigator.clipboard.writeText(text).then(() => {
       alert("コピーしました！");
     });
   }
 
-  buildRows();
-
-  document.getElementById("generateBtn").addEventListener("click", generateMessage);
-  document.getElementById("clearBtn").addEventListener("click", clearAll);
-  document.getElementById("copyBtn").addEventListener("click", copyToClipboard);
+  build();
+  document.getElementById("generate").addEventListener("click", generate);
+  document.getElementById("reset").addEventListener("click", build);
+  document.getElementById("copy").addEventListener("click", copyToClipboard);
 </script>
 
 </body>
 </html>
-
