--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
     { name: "野中", default: "出社", canExternal: true },
     { name: "小田部", default: "在宅", canExternal: true },
     { name: "軽石", default: "出社", canExternal: true },
+    { name: "宮本", default: "在宅", canExternal: true },
     { name: "宮本", default: "在宅", canExternal: true }
   ];
 
@@ -243,3 +244,4 @@
 
 </body>
 </html>
+
