--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     { name: "小田部", default: "在宅", canExternal: true },
     { name: "軽石", default: "出社", canExternal: true },
     { name: "宮本", default: "在宅", canExternal: true },
-    { name: "宮本", default: "在宅", canExternal: true }
+    { name: "苅安", default: "在宅", canExternal: true }
   ];
 
   function build() {
@@ -244,4 +244,5 @@
 
 </body>
 </html>
+
 
