--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>勤務状況メッセージ作成ツール</title>
+  <link rel="icon" type="image/png" href="/favicon.png">
   <style>
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
@@ -244,5 +245,6 @@
 
 </body>
 </html>
+
 
 
